[metadata]
name = pwn_gadget
version =  0.0.1
url = https://github.com/zolutal/pwn_gadget
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
description = Find satisfiable one gadgets from a running gdb instance 
long_description = file: README.md
long_description_content_type = text/markdown

[options]
install_requires =
python_requires = >= 3.8
packages = find: